--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,14 @@ h1.logo {
   font-family: 'Demolition Crack Black';
   font-size: 4em; }
 
+
+h1.end{
+  position: relative;
+  color: #fff;
+  opacity: 0;
+  transition: 0.8s ease-in-out;
+}
+
 #container {
   height: 100vh;
   display: flex;
